--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Robert DIppolito</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,23 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+  	<div id="container">
+  		<div id="banner-container">
+
+  		<div id="name">
+  			<p id="text">Robert!</p>
+  		</div>
+
+  		<div id="links">
+  			<ul>
+  				<li><a href="#">projects</a></li>
+  				<li><a href="#">about</a></li>
+  				<li><a href="#">resume</a></li>
+  				<li><a href="#">contact</a></li>
+  			</ul>
+  		</div>
+  	</div>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
