--- a/index.html
+++ b/index.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Robert DIppolito</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  	<title>Robert D'Ippolito</title>
+  	<meta name="description" content="Who is Robert?">
+  	<link rel="shortcut icon" href="#">
+  	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+
   <body>
   	<div id="container">
   		<div id="banner-container">
+  			<div id="name">
+  				<p id="text">r.DIPPOLITO</p>
+  			</div>
 
-  		<div id="name">
-  			<p id="text">Robert!</p>
-  		</div>
+  			<div id="links">
+        		<ul>
+        			<li><a href="#">about</a></li>
+		          	<li><a href="#">projects</a></li>
+          			<li><a href="#">resume</a></li>
+          			<li><a href="#">contact</a></li>
+        		</ul>
+      		</div>
 
-  		<div id="links">
-  			<ul>
-  				<li><a href="#">projects</a></li>
-  				<li><a href="#">about</a></li>
-  				<li><a href="#">resume</a></li>
-  				<li><a href="#">contact</a></li>
-  			</ul>
-  		</div>
-  	</div>
-  </div>
+      		<div style="display:none"><img src="#"></div>
+      	</div>
+    </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
