--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         		<ul>
         			<li><a href="#">about</a></li>
 		          	<li><a href="#">projects</a></li>
-          			<li><a href="#">resume</a></li>
-          			<li><a href="#">contact</a></li>
+          			<li><a href="#">blog</a></li>
+          			<li><a href="contact.html">contact</a></li>
         		</ul>
       		</div>
 
