Linked About Page
Small change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   			<div id="links">
         		<ul>
-        			<li><a href="#">about</a></li>
+        			<li><a href="about.html">about</a></li>
 		          	<li><a href="#">projects</a></li>
           			<li><a href="#">blog</a></li>
           			<li><a href="contact.html">contact</a></li>
