--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <div id="header">
             <a href="index.html"><div id="logo">RD</div></a>
         </div>
-        <div id="container">
+        <div id="container-about">
 <!--             <div id="image-wrapper">
                 <img src="#"/>
             </div> -->
