--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <div id="article">
                 <p>I currently work as a technology consulting analyst with <a href="https://www.accenture.com/ca-en" targer="blank">Accenture</a>.</p>  
                 <p>I grew up in Toronto and graduated from the University of Toronto with a degree in civil engineering and a minor in busines.</p>
-                <p>Follow me on <a href="#" target="blank">Twitter</a> or <a href="#" target="blank">GitHub</a> and see what I'm up to.</p>
+                <p>Follow me on <a href="https://twitter.com/diippy" target="blank">Twitter</a> or <a href="https://github.com/rdippolito" target="blank">GitHub</a> and see what I'm up to.</p>
 <!--                 <div id="image-wrapper">
                     <img src="#" style="width: 800px; margin-left: -100px;" />
                 </div> -->
