--- a/about.html
+++ b/about.html
@@ -2,6 +2,19 @@
     <head>
         <title>About</title>
         <link rel="stylesheet" href="css/style.css">
+
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-75158268-1', 'auto');
+            ga('send', 'pageview');
+            
+        </script>
+
     </head>
     <body>
         <div id="header">
@@ -13,7 +26,7 @@
             </div> -->
             <h1>Hi, I'm Rob.</h1>
             <div id="article">
-                <p>I currently work as a technology consulting analyst with <a href="https://www.accenture.com/ca-en" targer="blank">Accenture</a>.</p>  
+                <p>I currently work as a technology consulting analyst with a tech consulting firm.</p>  
                 <p>I grew up in Toronto and graduated from the University of Toronto with a degree in civil engineering and a minor in busines.</p>
                 <p>Follow me on <a href="https://twitter.com/diippy" target="blank">Twitter</a> or <a href="https://github.com/rdippolito" target="blank">GitHub</a> and see what I'm up to.</p>
 <!--                 <div id="image-wrapper">
@@ -28,7 +41,6 @@
                 </div> -->
                 <h2>Fitness</h2>
                 <p>I try to lead a healthy lifestyle. I enjoy cooking, gyming and cycling. Last year I ran my first (and probably last) <a href='assets/Triathlon.JPG' target='blank'>triathlon</a>. I'm always open to new foods and workouts.</p>
-                <p>Physical and mental health are very important to me.</p>
             </div>
             <div id="footer">
             </div>
