--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   			<div id="links">
         		<ul>
         			<li><a href="about.html">about</a></li>
-		          	<li><a href="#">projects</a></li>
-          			<li><a href="#">blog</a></li>
+		          	<li><a href="projects.html">projects</a></li>
+          			<li><a href="blog.html">blog</a></li>
           			<li><a href="contact.html">contact</a></li>
         		</ul>
       		</div>
