--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
             ga('create', 'UA-75158268-1', 'auto');
             ga('send', 'pageview');
-            
+
         </script>
 
     </head>
@@ -27,15 +27,15 @@
             <h1>Hi, I'm Rob.</h1>
             <div id="article">
                 <p>I currently work as a technology consulting analyst with a tech consulting firm.</p>  
-                <p>I grew up in Toronto and graduated from the University of Toronto with a degree in civil engineering and a minor in busines.</p>
-                <p>Follow me on <a href="https://twitter.com/diippy" target="blank">Twitter</a> or <a href="https://github.com/rdippolito" target="blank">GitHub</a> and see what I'm up to.</p>
+                <p>I grew up in Toronto and graduated from the University of Toronto with a degree in civil engineering and a minor in business.</p>
+                <p>Follow me on <a href="https://twitter.com/diippy" target="blank">Twitter</a> or <a href="https://github.com/rdippolito" target="blank">GitHub</a> to see what I'm up to.</p>
 <!--                 <div id="image-wrapper">
                     <img src="#" style="width: 800px; margin-left: -100px;" />
                 </div> -->
                 <h2>Programming</h2>
-                <p>I developed a passion for programming towards the end of my undergrad. Coming from a civil engineering background the opportunities to code were few and far between, however, after taking an online iOS dev course I was hooked.</p>
+                <p>I developed a passion for programming towards the end of my undergrad. Coming from a civil engineering background the opportunities to code were few and far between.</p>
                 <p>It wasn't until after I graduated and worked at <a href='https://www.facebook.com/hatchery123/videos/vb.100003548364529/765258230269115/?type=2' target='blank'>The Hatchery</a> that I realized my love for creating.</p>
-                <p>I am a <a href='http://mentormee.info/' target='blank'>co founder</a>, an <a href='https://itunes.apple.com/ky/app/eddgi/id1061188451?mt=8' target='blank'>app creator</a> and a tech enthusiast.</p>
+                <p>I am a <a href='http://mentormee.info/' target='blank'>Co-founder</a>, an <a href='https://itunes.apple.com/ky/app/eddgi/id1061188451?mt=8' target='blank'>app creator</a> and a tech enthusiast.</p>
 <!--                 <div id="image-wrapper">
                     <img src="#" style="width: 800px; margin-left: -100px;" />
                 </div> -->
