--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             </div> -->
             <h1>Hi, I'm Rob.</h1>
             <div id="article">
-                <p>I currently work as a technology consulting analyst with a tech consulting firm.</p>  
+                <p>I currently work as a technology consulting analyst with <a href='https://www.accenture.com/ca-en/' target='blank'>Accenture</a>.</p>  
                 <p>I grew up in Toronto and graduated from the University of Toronto with a degree in civil engineering and a minor in business.</p>
                 <p>Follow me on <a href="https://twitter.com/diippy" target="blank">Twitter</a> or <a href="https://github.com/rdippolito" target="blank">GitHub</a> to see what I'm up to.</p>
 <!--                 <div id="image-wrapper">
