Added Mentormee + Eddgi
Added projects. Minor changes to other elements.

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <h2>Programming</h2>
                 <p>I developed a passion for programming towards the end of my undergrad. Coming from a civil engineering background the opportunities to code were few and far between.</p>
                 <p>It wasn't until after I graduated and worked at <a href='https://www.facebook.com/hatchery123/videos/vb.100003548364529/765258230269115/?type=2' target='blank'>The Hatchery</a> that I realized my love for creating.</p>
-                <p>I am a <a href='http://mentormee.info/' target='blank'>Co-founder</a>, an <a href='https://itunes.apple.com/ky/app/eddgi/id1061188451?mt=8' target='blank'>app creator</a> and a tech enthusiast.</p>
+                <p>I am a <a href='http://mentormee.info/' target='blank'>Co-founder</a>, an <a href='https://itunes.apple.com/ky/app/eddgi/id1061188451?mt=8' target='blank'>iOS Developer</a> and a tech enthusiast.</p>
 <!--                 <div id="image-wrapper">
                     <img src="#" style="width: 800px; margin-left: -100px;" />
                 </div> -->
