--- a/projects/Eddgi.html
+++ b/projects/Eddgi.html
@@ -9,7 +9,7 @@
         </div>
 
             <div id="image-wrapper">
-                <img src="../assets/eddgi.png"/>
+                <img src="../assets/EDDGI_2.jpg"/>
             </div>
 
         <div id="container-mentormee">
