--- a/BPs/blogpost001.html
+++ b/BPs/blogpost001.html
@@ -28,23 +28,23 @@
                         <p>Virtual reality is an emerging technology that has the potential to disrupt just about every professional industry in the world. The problem, however, is that the technology simply cannot provide the immersive experience at a reasonable price. Companies like <a href="https://www.oculus.com/en-us/">Oculus</a> and <a href="http://www.htc.com/ca/">HTC</a> who are considered the industry leaders in VR delivery are offering high end Star Trek like space helmets with a steep $600.00 price tag. At the other end of the spectrum is Google's VR experiment, the Google Cardboard.</p>
                         <p><a href="https://www.google.com/get/cardboard/">The Google Cardboard</a> is a low cost VR headset that offers customers a taste of what VR is capable of. Google has since stopped selling the cardboard on their website but they have open sourced the entire <a href="https://www.google.com/get/cardboard/downloads/wwgc_manufacturers_kit.zip">blue print</a>. All you need is a piece of cardboard, a couple strips of Velcro and two lenses, oh and a smartphone but you already had one of those (it is 2016 after all). If you're lazy like me you can order one from <a href="https://www.amazon.ca/gp/product/3056517311/ref=pd_lpo_sbs_dp_ss_1?pf_rd_p=1977604502&pf_rd_s=lpo-top-stripe&pf_rd_t=201&pf_rd_i=B00LQ6ICJ8&pf_rd_m=A3DWYIK6Y9EEQB&pf_rd_r=JFHA3RGEM2DSZJ4J8XSN">Amazon</a>.</p>
                         <p>After building the cardboard and playing around with it here are my 5 takeaways:</p>
-                        <div id="image-wrapper">
-                            <img src="../assets/Cardboard_1.jpg"/>
-                            <p>The contents of my order.</p>
-                        </div>
-                        <p><b>1. iOS Compatible?</b></p>
-                        <p>Despite what is advertised the Google Cardboard is compatible with most iOS devices. The Cardboard was able to house my iPhone 6 & iPhone 5s perfectly, however, I don't think iPhone 6+ users would have the same success. The official Cardboard app is also available on the App Store which allows users to play with all of the functionalities of the device including the magnet side control.</p>
-                        <p><b>2. Product Quality - My Nose Hurts!</b></p>
-                        <p>The Google Cardboard&#8217;s design is simple, functional and awesome. Two strips of Velcro, an elastic band and small slits in the carboard allow users to assemble the device in less than 5 minutes. My cardboard came with an extra Velcro band that lets you strap the device to your face (literally). The strap is not in Google&#8217;s design documentation and was an extra &#8217;feature&#8217; from the third party reseller. The strap makes things uncomfortable and resulted in some discomfort around the bridge of my nose. The additional stress from the tensioned bands also distorted the carboard slightly.</p>
-                        <div id="image-wrapper">
-                            <img src="../assets/Cardboard_2.jpg"/>
-                            <p>The assembled Google Cardboard.</p>
-                        </div>
-                        <p><b>3. Jaunt VR and Other Notables</b></p>
+                        <p><b>1. My Suggested Apps</b></p>
                         <p>Outside of the official Google Cardboard app there were several Cardboard compatible applications. I was skeptical of any third party applications but I was pleasantly surprised with <a href="https://www.jauntvr.com/">Jaunt VR</a>, <a href="http://www.youvisit.com/virtual-reality">YouVisit VR</a> and <a href="http://vrse.com/">Vrse</a>.</p>
                         <ul><a href="https://www.jauntvr.com/">Jaunt VR: </a>A great selection of 360 degree interactive videos and an intuitive navigation system made Jaunt my favorite.</ul>
                         <ul><a href="http://www.youvisit.com/virtual-reality">YouVisit VR</a>: A wide selection of 360 degree videos, no interactive videos available but a great navigation system.</ul>
                         <ul><a href="http://vrse.com/">Vrse</a>: Good but limited selection of 360 degree videos, no navigation system.</ul>
+                        <div id="image-wrapper">
+                            <img src="../assets/Cardboard_1.jpg"/>
+                            <p>The contents of my order.</p>
+                        </div>
+                        <p><b>2. Product Quality - My Nose Hurts!</b></p>
+                        <p>The Google Cardboard&#8217;s design is simple, functional and awesome. Two strips of Velcro, an elastic band and small slits in the carboard allow users to assemble the device in less than 5 minutes. My cardboard came with an extra Velcro band that lets you strap the device to your face (literally). The strap is not in Google&#8217;s design documentation and was an extra &#8217;feature&#8217; from the third party reseller. The strap makes things uncomfortable and resulted in some discomfort around the bridge of my nose. The additional stress from the tensioned bands also distorted the carboard slightly.</p>
+                        <p><b>3. iOS Compatible?</b></p>
+                        <p>Despite what is advertised the Google Cardboard is compatible with most iOS devices. The Cardboard was able to house my iPhone 6 & iPhone 5s perfectly, however, I don't think iPhone 6+ users would have the same success. The official Cardboard app is also available on the App Store which allows users to play with all of the functionalities of the device including the magnet side control.</p>
+                        <div id="image-wrapper">
+                            <img src="../assets/Cardboard_2.jpg"/>
+                            <p>The assembled Google Cardboard.</p>
+                        </div>
                         <p><b>4. Potential for Developers</b></p>
                         <p>I like developing iOS apps in my spare time and after experiencing the Cardboard I think there's huge potential for developers. I was surprised at the amount of VR options available at the app store but they were all more or less copies of each other. With the emergence of 360 video support on sites like <a href="https://www.youtube.com/watch?v=_PMb8bfAXtE">Youtube</a> the application of low cost VR experiences are endless. Once developers find a way to interact with the smartphone outside of the available magnet side control VR games will start to gain traction. The challenge, however, lies in getting the hardware into people's hands and Google has done everything they can to make that happen with the Google Cardboard.</p>
                         <p><b>5. VR is Coming and Soon!</b></p>
